--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "dotenv": "^16.3.1",
-    "grammy": "^1.17.2"
+    "grammy": "^1.17.2",
+    "octokit": "^3.0.0"
   }
 }
